#119: removes java parameter