@@ -2,5 +2,4 @@
 -Xms1g
 -XX:+UseG1GC
 -Dfile.encoding=UTF-8
---sun-misc-unsafe-memory-access=allow
 --enable-native-access=ALL-UNNAMED
